--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /ci_keuangan/
+    RewriteBase /Project_Aplikasi_Keuangan/
 
     # Jika file atau folder tidak ditemukan, arahkan ke index.php
     RewriteCond %{REQUEST_FILENAME} !-f
