--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,10 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /Project_Aplikasi_Keuangan/
+    RewriteBase /
 
-    # Jika file atau folder tidak ditemukan, arahkan ke index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php/$1 [L]
+
+    RewriteRule ^(.*)$ index.php?/$1 [L]
+
 </IfModule>
